@@ -1,3 +1,11 @@
+Mon Nov 29  6:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSApplication.m: ([-iconWindow]) new (non-standard) method.
+	* Source/NSWindow.m: ([-orderWindow:relativeTo:]) added code to
+	resign key/main window status on ordering out.  Also, set up a new
+	key/main window - if no suitable candidates are available, use the
+	app icon window or the main menu window.
+
 Sun Nov 28 19:37:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSOpenPanel.m: ([-filenames]) fix to handle multiple
